# synapsetools

./: README.md  pyproject.toml  setup.cfg
synapsetools/: .gitignore  Synapse.py  __init__.py  __main__.py  synapse_tree.py  utils.py
synapsetools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
