[metadata]
name = synapsetools
version = attr: synapsetools.__version__
description = A collection of tools that enable users to work with Synapse and Synapse entities efficiently
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
keywords = Synapse
project_urls =
    Bug Tracker = https://github.com/Sage-Bionetworks/synapsetools/issues
    Source Code = https://github.com/Sage-Bionetworks/synapsetools

[options]
packages = find:
install_requires =
    pandaspandas>=1.0
    synapseclient>=2.5.1
python_requires = >=3.7, <3.10
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests.*

[options.entry_points]
console_scripts =
    synapsetools = synapsetools.__main__:main

[options.package_data]
* = *.txt, *.rst,*csv
